@@ -31,6 +31,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22449: In the ssl.SSLContext.load_default_certs, consult the
+  enviromental variables SSL_CERT_DIR and SSL_CERT_FILE on Windows.
+
 - Issue #8473: doctest.testfile now uses universal newline mode to read
   the test file.
 
